# pioneer

./: .gitignore  BuildNotes.txt  Legal.txt  Makefile.am  Paragon_AUTHORS.txt  Paragon_Changelog.txt  README.md  README.txt  ReleaseCycle.txt  VIDEO TUTORIAL.txt  VIDEO TUTORIAL.url  configure.ac  paragon
application-icon/: paragon.icns
data/: Makefile.am
debian/: changelog  control  copyright  paragon-data.install  paragon.install  rules
osx/: Makefile.am  SDLMain.m  paragon-logo.icns  paragon.sh  pioneerApp.xib
osx/paragon/: paragon-Info.plist
osx/paragon.xcodeproj/: project.pbxproj
osx/paragon.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/paragon.xcodeproj/project.xcworkspace/xcshareddata/: paragon.xccheckout  pioneer.xccheckout
osx/paragon.xcodeproj/project.xcworkspace/xcuserdata/rivalin.xcuserdatad/: UserInterfaceState.xcuserstate
osx/paragon.xcodeproj/xcuserdata/rivalin.xcuserdatad/xcschemes/: GenGitVersion.xcscheme  paragon.xcscheme  pioneer.xcscheme  xcschememanagement.plist
osx/paragon/en.lproj/: Credits.rtf
src/: Background.cpp  Background.h  Body.cpp  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CityOnPlanet.cpp  Color.cpp  Color.h  Colors.h  CommodityTradeWidget.cpp  DeathView.cpp  DynamicBody.cpp  DynamicBody.h  Easing.h  EquipType.cpp  EquipType.h  Factions.cpp  Frame.cpp  Frame.h  GalacticView.cpp  GalacticView.h  (+145 more)
src/graphics/: Drawables.cpp  Graphics.cpp  GraphicsHardware.h  Light.cpp  Light.h  Makefile.am  Material.cpp  Material.h  PostProcess.cpp  PostProcess.h  PostProcessLayer.h  PostProcessing.cpp  PostProcessing.h  Renderer.cpp  Renderer.h  RendererGL2.cpp  RendererGL2.h  RendererGL3.cpp  RendererGL3.h  RendererLegacy.cpp  RendererLegacy.h  Texture.h  TextureBuilder.cpp  TextureBuilder.h  TextureGL.cpp  TextureGL.h  Types.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  WindowSDL.cpp
src/graphics/effects/: RadialBlurMaterial.h
src/graphics/effects/sector_view/: SectorViewIconMaterial.h
src/graphics/effects/thruster_trails/: ThrusterTrailsDepthMaterial.h  ThrusterTrailsMaterial.h
src/graphics/effects/transit/: TransitCompositionMaterial.h  TransitEffectMaterial.h
src/graphics/gl2/: BloomCompositorMaterial.h  GL2VertexBuffer.cpp  GL2VertexBuffer.h  HorizontalBlurMaterial.h  MultiMaterial.cpp  Program.cpp  Program.h  ShieldMaterial.h  SkyboxMaterial.h  TexturedFullscreenQuad.h  Uniform.cpp  Uniform.h  VerticalBlurMaterial.h
src/graphics/gl3/: AttributeGL3.cpp  AttributeGL3.h  BuiltInShaders.h  Effect.cpp  Effect.h  EffectMaterial.cpp  EffectMaterial.h  EffectProgram.cpp  EffectProgram.h  EffectShader.cpp  EffectShader.h  ProgramGL3.cpp  ProgramGL3.h  RenderStateGL3.cpp  RenderStateGL3.h  RenderTargetGL3.cpp  RenderTargetGL3.h  UniformGL3.cpp  UniformGL3.h  VertexBufferGL3.cpp  VertexBufferGL3.h
(+519 files in other folders)
