EXTRA_DIST = \
	SDLMain.h \
	SDLMain.m \
	SDLMain.nib/designable.nib \
	SDLMain.nib/keyedobjects.nib \
	main.cpp \
	paragon-logo.icns \
	paragon-logo.png \
	paragon.xcodeproj/project.pbxproj \
	paragon.xcodeproj/project.xcworkspace/contents.xcworkspacedata \
	paragon/en.lproj/Credits.rtf \
	paragon/en.lproj/InfoPlist.strings \
	paragon/paragon-Info.plist \
	paragon/paragon-Prefix.pch

include $(top_srcdir)/Makefile.common
